# MyCup

./: .env.example  .gitignore  HANDOFF.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1b160c666d39_create_users_table.py  2672fd40bbd6_create_votes_table.py  2fe7bd3a35d8_add_worldcup_count_fields_to_users.py  33eda0338021_create_shares_table.py  510e9c0afe9f_add_analysis_result_to_photos.py  5459046396b1_add_analysis_result_to_worldcups.py  6976e442f00c_add_indexes_for_performance.py  6f03b45deb06_add_oauth_fields_to_users.py  7be1c1887109_create_photos_table.py  f010124f57e8_create_worldcups_and_matches_tables.py
app/: config.py  database.py
app/api/: deps.py
app/api/routes/: auth.py  photos.py  share.py  worldcup.py
app/core/: file_security.py  logger.py  logging_middleware.py  security.py
app/models/: __init__.py  match.py  photo.py  share.py  user.py  vote.py  worldcup.py
app/schemas/: photo.py  share.py  user.py  worldcup.py
app/services/: ai_service.py  cardnews_service.py  oauth_service.py  rate_limit_service.py  worldcup_service.py
